# ai-native-storage-certus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Jenkinsfile  README.md
apps/: README.md
certus-connector/: Cargo.toml  README.md  pyproject.toml
certus-connector/certus_connector/: __init__.py  handler.py  manager.py  mediums.py  native_manager.py  spec.py
certus-connector/src/: engine.rs  keys.rs  lib.rs
certus-connector/tests/: test_manager.py
components/component-framework/: .txt  CLAUDE.md  Cargo.toml  EXPERIMENT.md  README-Quick.md  README.md  rustfmt.toml
components/component-framework/.specify/extensions/: .registry
components/component-framework/.specify/memory/: constitution.md
components/component-framework/.specify/sync/: apply-report.json  apply-report.md  drift-report.json  drift-report.md  proposals.json  proposals.md
components/component-framework/.specify/sync/backups/2026-04-06/: 001-spec.md  002-spec.md  003-spec.md  005-spec.md
components/component-framework/crates/component-core/: Cargo.toml
components/component-framework/crates/component-core/src/: actor.rs  binding.rs  component.rs  component_ref.rs  error.rs  interface.rs  iunknown.rs  lib.rs  log.rs  prelude.rs  receptacle.rs  registry.rs
components/component-framework/crates/component-core/src/channel/: crossbeam_bounded.rs  crossbeam_unbounded.rs  kanal_bounded.rs  mod.rs  mpsc.rs  queue.rs  rtrb_spsc.rs  spsc.rs  tokio_mpsc.rs
components/component-framework/crates/component-core/src/numa/: allocator.rs  cpuset.rs  mod.rs  topology.rs
components/component-framework/crates/component-core/tests/: numa_integration.rs
components/component-framework/crates/component-framework/: Cargo.toml
components/component-framework/crates/component-framework/benches/: actor_latency.rs  binding.rs  channel_latency_benchmark.rs  channel_mpsc_benchmark.rs  channel_spsc_benchmark.rs  channel_throughput.rs  component_ref.rs  method_dispatch.rs  numa_latency_benchmark.rs  numa_throughput_benchmark.rs  query_interface.rs  receptacle.rs  registry.rs
components/component-framework/crates/component-framework/src/: lib.rs
components/component-framework/crates/component-framework/tests/: actor.rs  actor_pipeline.rs  assembly.rs  binding.rs  binding_enforcement.rs  channel_mpsc.rs  channel_spsc.rs  component_iunknown.rs  component_ref.rs  interface_definition.rs  receptacle_wiring.rs  registry.rs
components/component-framework/crates/component-macros/: Cargo.toml
components/component-framework/crates/component-macros/src/: define_component.rs  define_interface.rs  lib.rs
components/component-framework/examples/: Cargo.toml  actor_factory.rs  actor_fan_in.rs  actor_log.rs  actor_ping_pong.rs  actor_pipeline.rs  basic.rs  binding.rs  introspection.rs  numa_pinning.rs  tokio_ping_pong.rs  wiring.rs
components/component-framework/info/: PROMPTS.md
components/component-framework/info/conversations/: claude.001.examples.txt  claude.001.txt  claude.002.txt  claude.003.txt  claude.004.txt  claude.005.txt  claude.007.txt
components/component-framework/info/costs/: claude.001  claude.002  claude.003  claude.004  claude.005  claude.006
components/component-framework/info/flow/: flowchart.mmd
components/component-framework/info/metrics/: bench_channel_1024.csv  collect_means.py  metrics_all.csv  metrics_all.json  metrics_keys.json  metrics_means.csv  metrics_means.json
components/component-framework/specs/001-com-component-framework/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
components/component-framework/specs/001-com-component-framework/checklists/: requirements.md
components/component-framework/specs/001-com-component-framework/contracts/: public-api.md
components/component-framework/specs/002-registry-refcount-binding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
components/component-framework/specs/002-registry-refcount-binding/checklists/: requirements.md
components/component-framework/specs/002-registry-refcount-binding/contracts/: public-api.md
components/component-framework/specs/003-actor-channels/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
components/component-framework/specs/003-actor-channels/checklists/: requirements.md
components/component-framework/specs/004-channel-benchmarks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
components/component-framework/specs/004-channel-benchmarks/checklists/: requirements.md
components/component-framework/specs/004-channel-benchmarks/contracts/: channel-component.md
components/component-framework/specs/005-numa-aware-actors/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
components/component-framework/specs/005-numa-aware-actors/checklists/: requirements.md
components/component-framework/specs/005-numa-aware-actors/contracts/: public-api.md
components/component-framework/specs/006-log-handler/: spec.md
components/dispatcher/v0/: CLAUDE.md  Cargo.toml  README.md
components/dispatcher/v0/benches/: dispatcher_benchmark.rs
components/dispatcher/v0/design/: DESIGN.md
components/dispatcher/v0/info/: transcript.md  transcript_37be9985-bf7f-4fa8-a1e5-07c10a60b4d8_2026-05-04.md
components/dispatcher/v0/specs/001-dispatcher-cache-interface/: spec.md
components/dispatcher/v0/specs/001-dispatcher-cache-interface/contracts/: idispatcher.md
components/dispatcher/v0/src/: background.rs  lib.rs
components/dispatcher/v0/tests/: integration.rs  lazy_migration.rs
components/example-helloworld/: Cargo.toml
components/example-helloworld/src/: lib.rs  main.rs
design/: design-spec-hit-flow.md  design-spec-put-flow.md  vllm-hit-ratio.md
kernel/modules/nvidia_p2p/rust/: Cargo.toml
kernel/modules/nvidia_p2p/rust/benches/: cuda_helpers  pin_unpin.rs
kernel/modules/nvidia_p2p/rust/src/: device.rs  error.rs  ioctl.rs  lib.rs
kernel/modules/nvidia_p2p/rust/tests/: cuda_pin_test.rs  integration.rs
kernel/modules/nvidia_p2p/rust/tests/cuda_helpers/: mod.rs
knowledge/: README.md
(+170 files in other folders)
