[workspace]
members = [
    "crates/component-core",
    "crates/component-macros",
    "crates/component-framework",
    "examples",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
component-core = { path = "crates/component-core" }
component-macros = { path = "crates/component-macros" }
component-framework = { path = "crates/component-framework" }
