[package]
name = "component-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core traits and types for the COM-style component framework"

[dependencies]
crossbeam-channel = "0.5"
kanal = "0.1"
libc = "0.2"
rtrb = "0.3"
tokio = { version = "1", features = ["sync"] }
