[package]
name = "component-framework"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "COM-style component framework for Rust — facade crate"

[dependencies]
component-core = { path = "../component-core" }
component-macros = { path = "../component-macros" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "query_interface"
harness = false

[[bench]]
name = "receptacle"
harness = false

[[bench]]
name = "method_dispatch"
harness = false

[[bench]]
name = "registry"
harness = false

[[bench]]
name = "binding"
harness = false

[[bench]]
name = "component_ref"
harness = false

[[bench]]
name = "channel_throughput"
harness = false

[[bench]]
name = "actor_latency"
harness = false

[[bench]]
name = "channel_spsc_benchmark"
harness = false

[[bench]]
name = "channel_mpsc_benchmark"
harness = false

[[bench]]
name = "channel_latency_benchmark"
harness = false

[[bench]]
name = "numa_latency_benchmark"
harness = false

[[bench]]
name = "numa_throughput_benchmark"
harness = false
