[package]
name = "nvidia-p2p-pin"
version = "0.1.0"
edition = "2021"
description = "Safe Rust bindings for the nvidia_p2p_pin kernel module"
license = "MIT"

[dependencies]
nix = { version = "0.29", features = ["ioctl", "fs"] }

[dev-dependencies]
libloading = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pin_unpin"
harness = false
